--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: node_js
+
+sudo: false
+
 node_js:
-  - "iojs"
-  - "7"
+  # Node.js
+  - 'node'
+  - '6'
+  - '5'
+  - '4'
+
+before_install:
+  # Update the npm client. Older clients cannot, e.g., handle scoped modules.
+  - npm update -g npm
+
+after_script:
+  - npm run dev
