--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,5 @@
 language: node_js
-
-sudo: false
-
-node_js:
-  # Node.js
-  - 'node'
-  - '6'
-  - '5'
-  - '4'
-
-before_install:
-  # Update the npm client. Older clients cannot, e.g., handle scoped modules.
-  - npm update -g npm
-
-after_script:
-  - npm run dev
+node_js: stable,
+group: stable,
+dist: precise,
+os: linux
